Update products: 4 changes

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "b766a16d8015ca12dd3619f0a9824600fdcc3a11",
-  "updatedAt": "2025-11-17T20:30:20.454Z"
+  "lastCommitSHA": "pending",
+  "updatedAt": "2025-11-18T11:53:30.231Z"
 }
