--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "pending",
-  "updatedAt": "2025-11-18T11:53:30.231Z"
+  "lastCommitSHA": "25a40dcfb307e2caa45c53daaecceaae6f47907d",
+  "updatedAt": "2025-11-18T11:53:34.838Z"
 }
