--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "pending",
-  "updatedAt": "2025-11-18T12:01:09.109Z"
+  "lastCommitSHA": "69f413108a4c2717de0a0dbfe853ae8ea2841011",
+  "updatedAt": "2025-11-18T12:01:13.239Z"
 }
