Update products: 1 changes

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "69f413108a4c2717de0a0dbfe853ae8ea2841011",
-  "updatedAt": "2025-11-18T12:01:13.239Z"
+  "lastCommitSHA": "pending",
+  "updatedAt": "2025-11-18T12:03:12.319Z"
 }
