--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "pending",
-  "updatedAt": "2025-11-18T12:03:12.319Z"
+  "lastCommitSHA": "65d600f48998bae604274924a80b6fdc20f49f09",
+  "updatedAt": "2025-11-18T12:03:16.729Z"
 }
