--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "6b96cc28c92d1198df3c76418f80b9c79e6b2959",
-  "updatedAt": "2025-11-18T12:31:25.829Z"
+  "lastCommitSHA": "pending",
+  "updatedAt": "2025-11-18T14:05:46.324Z"
 }
