--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "pending",
-  "updatedAt": "2025-11-18T14:05:46.324Z"
+  "lastCommitSHA": "ecabab685c5fb4949c4ded0d03933e60379e1159",
+  "updatedAt": "2025-11-18T14:05:51.236Z"
 }
