Update products: 1 changes

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "2bbb29bcb2a2717e39cfb192ee13a2b84700e9d1",
-  "updatedAt": "2025-11-18T14:06:51.079Z"
+  "lastCommitSHA": "pending",
+  "updatedAt": "2025-11-18T19:45:24.766Z"
 }
