--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "0c75022070cc87ae4ff58fc3583d7613af1fcae2",
-  "updatedAt": "2025-11-18T19:45:47.691Z"
+  "lastCommitSHA": "pending",
+  "updatedAt": "2025-11-18T19:49:47.945Z"
 }
