--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "lastCommitSHA": "pending",
-  "updatedAt": "2025-11-18T19:49:47.945Z"
+  "lastCommitSHA": "06234a149384e47fd77cc53895636550fdde2a2b",
+  "updatedAt": "2025-11-18T19:49:52.588Z"
 }
